fix for ec2 collapse lag

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -246,3 +246,7 @@ table {
 .coverage-report table tr td {
     min-width: 20em;
 }
+
+.coverage-report table .collapsing {
+    transition: none !important;
+  }
